<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bgrd">


    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/registerTitle"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="326dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_email_field"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="329dp"
        android:layout_height="59dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/enter_user_password"
        android:textAlignment="gravity"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_confirm_psswrd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_confirm_psswrd"
        android:layout_width="329dp"
        android:layout_height="58dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:hint="@string/register_confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_user_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_user_btn"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F44336"
        android:text="@string/registering_user"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/alreadyMemberBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/alreadyMemberBtn"
        android:layout_width="325dp"
        android:layout_height="42dp"
        android:layout_marginBottom="168dp"
        android:background="@null"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/alreadyUserText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>