<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bgrd">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/product_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textFontWeight="50"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/google_btn"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="184dp"
        android:text="@string/google_sign_up"
        app:isDarkTheme="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.93" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_email_field"
        app:layout_constraintBottom_toTopOf="@+id/google_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="0.239" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:color="?android:attr/selectableItemBackground"
        android:hint="@string/enter_user_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/google_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="367dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="272dp"
        android:backgroundTint="#EC4B40"
        android:shadowColor="#1B1313"
        android:text="@string/login_btn"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="365dp"
        android:layout_height="33dp"
        android:background="@null"
        android:backgroundTint="#0FFFFFFF"
        android:text="@string/registerBtnText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_btn"
        app:layout_constraintVertical_bias="0.379" />

    <Button
        android:id="@+id/forgot_password_btn"
        android:layout_width="362dp"
        android:layout_height="27dp"
        android:layout_marginBottom="160dp"
        android:background="@null"
        android:backgroundTint="#00FFFFFF"
        android:includeFontPadding="false"
        android:text="@string/forgot_password"
        android:textColor="#FF9800"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>